<resources>
    <string name="app_name">Film Time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show">Show</string>
    <string name="signin">Sign In</string>
    <string name="recover_password">Recover Password</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="download">Download</string>
    <string name="more">More</string>
    <string name="ninety_six">96%&#160;</string>
    <string name="match">Match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_releases">New Releases</string>
    <string name="engaging_choice">Engaging Choice</string>
    <string name="most_popular">Most Popular</string>
    <string name="recommended">Recommended</string>
    <!--Detail Activity-->
    <string name="boss_baby">BOSS BABY</string>
    <string name="by_dreamsworks_tv">by DreamWorksTv</string>
    <string name="poweredby">Powered by</string>
    <string name="release_date">Release Date &#160;</string>
    <string name="release_date_value">May 25, 2017</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="movie_info">The boss Baby brings his brother Tim to the office to teach him the art of business in this animeted series sprung from the hit film.</string>
    <string name="dummy_1">01 – Incredibles2</string>
    <string name="dummy_2">01 – Incredibles2</string>
    <string name="dummy_1_detail_1">Incredibles 2 is a 2018 American 3D computer-animated superhero film produced by Pixar Animation Studios and released by Walt Disney Pictures.</string>
    <string name="dummy_1_powered_by_1">by Disney PIXAR</string>


    <!--Validation of email id-->
    <string name="empty_email_id">Please enter email address to continue</string>
    <string name="email_validation">Please enter valid email.</string>
</resources>
