<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:checked="false"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:checked="false"
        android:icon="@drawable/icon"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_download"
        android:checked="false"
        android:icon="@drawable/d_icon"
        android:title="@string/download"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_more"
        android:checked="false"
        android:icon="@drawable/more_icon"
        android:title="@string/more"
        app:showAsAction="ifRoom" />
</menu>